--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up AWS CLI
+    - name: Set up AWS CLI 
       uses: aws-actions/configure-aws-credentials@v2
+with:
+  profile: my-profile  # Replace with your profile name
+  aws-region: us-east-1  # Replace with your region
+
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1
 
     - name: Deploy to AWS
