--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,26 +3,24 @@ name: Deploy to AWS
 on:
   push:
     branches:
-      - master  # Trigger the workflow when pushing to the master branch
+      - master  # Trigger the workflow on push to master branch
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Specify the type of runner
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Checkout the code from your repository
+      uses: actions/checkout@v3  # Checkout your code
 
     - name: Set up AWS CLI 
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Use the AWS Access Key ID from GitHub Secrets
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Use the AWS Secret Access Key from GitHub Secrets
-        aws-region: ap-south-1  # Replace with your AWS region
-        # profile: my-profile  # Uncomment this line if you're using a named AWS profile
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Use AWS Access Key from secrets
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Use AWS Secret Key from secrets
+        aws-region: ap-south-1  # AWS region
+        # profile: my-profile  # Optional, if you're using a named profile
 
     - name: Deploy to AWS
       run: |
-        aws s3 sync dist/ s3://reshbuckets  # Sync your files to the specified S3 bucket
-
-
+        aws s3 sync dist/ s3://reshbuckets  # Sync files to S3 bucket
