--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-    "start": "vite" 
+    "preview": "vite preview",
+    "start": "vite"  // Corrected with a comma before this line
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
