--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite"  // Corrected with a comma before this line
+    "start": "vite"  
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
